--- a/hcf.css
+++ b/hcf.css
@@ -1,2 +1,2 @@
 div[id="dispFilteredList_transfer"] label[class="css-radio-label menu-iterator-item"] {display:none;}
-div[id="dispFilteredList_transfer"] label[title="test xfr"] {display:block;}
+div[id="dispFilteredList_transfer"] label[title="Transfer To Aliera"] {display:block;}
